added support for xml script extender dependencies

--- a/InstallScripting/XmlScript/XmlScript.csproj
+++ b/InstallScripting/XmlScript/XmlScript.csproj
@@ -95,6 +95,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SEVersionCondition.cs" />
     <Compile Include="XmlScriptExecutor.cs" />
     <Compile Include="XmlScriptInstaller.cs" />
     <Compile Include="XmlScriptType.cs" />
