build fix attempt nr 768

--- a/ModInstallerTests/ModInstallerTests.csproj
+++ b/ModInstallerTests/ModInstallerTests.csproj
@@ -9,7 +9,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ModInstallerTests</RootNamespace>
     <AssemblyName>ModInstallerTests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFramework>net450</TargetFramework>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
