--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fomod-installer",
-  "version": "0.1.15",
+  "version": "0.1.16",
   "description": "Installer for xml and c# fomods",
   "main": "dummy.js",
   "scripts": {
@@ -11,8 +11,8 @@
   "author": "Black Tree Gaming Ltd.",
   "license": "GPL-3.0",
   "dependencies": {
+    "async": "^2.6.2",
     "copyfiles": "^1.0.0",
-    "msbuild": "^1.0.3",
-    "async": "^2.6.2"
+    "msbuild": "^1.0.3"
   }
 }
