--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fomod-installer",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Installer for xml and c# fomods",
   "scripts": {
     "buildDev": "node build.js Debug && copyfiles -f Build/bin/Debug/*.dll dist/ && copyfiles -f Build/bin/Debug/*.pdb dist/",
-    "build": "node build.js && copyfiles -f Build/bin/Release/*.dll dist/",
+    "build": "node build.js && copyfiles -f Build/bin/Release/*.dll dist/ && copyfiles -f Build/bin/Release/*.exe dist/",
     "postinstall": "npm run build"
   },
   "author": "Black Tree Gaming Ltd.",
