--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "fomod-installer",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Installer for xml and c# fomods",
   "scripts": {
-    "buildDev": "node build.js Debug && copyfiles -f Build/bin/Debug/*.dll dist/ && copyfiles -f Build/bin/Debug/*.pdb dist/",
+    "buildDev": "node build.js Debug && copyfiles -f Build/bin/Debug/*.dll dist/ && copyfiles -f Build/bin/Debug/*.pdb dist/ && copyfiles -f Build/bin/Release/*.exe dist/",
     "build": "node build.js && copyfiles -f Build/bin/Release/*.dll dist/ && copyfiles -f Build/bin/Release/*.exe dist/",
     "postinstall": "npm run build"
   },
