--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "Black Tree Gaming Ltd.",
   "license": "GPL-3.0",
+  "resolutions": {
+    "**/mkdirp/minimist": "1.2.2"
+  },
   "dependencies": {
     "async": "^2.6.2",
     "copyfiles": "^1.0.0",
