prevent pulling broken (?) msbuild module version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fomod-installer",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "Installer for xml and c# fomods",
   "scripts": {
     "buildDev": "node build.js Debug && copyfiles -f Build/bin/Debug/*.dll dist/ && copyfiles -f Build/bin/Debug/*.pdb dist/ && copyfiles -f Build/bin/Release/*.exe dist/",
@@ -12,6 +12,6 @@
   "dependencies": {
     "async": "^2.6.2",
     "copyfiles": "*",
-    "msbuild": "^1.0.3"
+    "msbuild": "1.1.2"
   }
 }
