--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fomod-installer",
-  "version": "0.5.24",
+  "version": "0.6.0",
   "description": "Installer for xml and c# fomods",
   "scripts": {
     "buildDev": "node build.js Debug && copyfiles -f Build/bin/Debug/*.dll dist/ && copyfiles -f Build/bin/Debug/*.pdb dist/ && copyfiles -f Build/bin/Release/*.exe dist/",
-    "build": "node build.js && copyfiles -f Build/bin/Release/*.dll dist/ && copyfiles -f Build/bin/Release/*.exe dist/",
+    "build": "node build.js",
     "postinstall": "npm run build"
   },
   "author": "Black Tree Gaming Ltd.",
@@ -12,6 +12,6 @@
   "dependencies": {
     "async": "^3.2.2",
     "copyfiles": "*",
-    "msbuild": "1.1.2"
+    "fs-extra": "^10.1.0"
   }
 }
