--- a/ModInstaller/ModInstaller.csproj
+++ b/ModInstaller/ModInstaller.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FomodInstaller.Interface\FomodInstaller.Interface.csproj" />
     <ProjectReference Include="..\InstallScripting\CSharpScript\CSharpScript.csproj" />
+    <ProjectReference Include="..\InstallScripting\ModScript\ModScript.csproj" />
     <ProjectReference Include="..\InstallScripting\Scripting\Scripting.csproj" />
     <ProjectReference Include="..\InstallScripting\XmlScript\XmlScript.csproj" />
     <ProjectReference Include="..\Utils\Utils.csproj" />
