--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "fomod-installer",
-  "version": "0.7.20",
+  "version": "0.7.21",
   "description": "Installer for xml and c# fomods",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Nexus-Mods/fomod-installer.git"
+  },
   "scripts": {
     "buildDev": "node build.js Debug && copyfiles -f Build/bin/Debug/*.dll dist/ && copyfiles -f Build/bin/Debug/*.pdb dist/ && copyfiles -f Build/bin/Release/*.exe dist/",
     "build": "node build.js",
