Added: Remaining NuGet Package Info

--- a/FomodInstaller.Interface/FomodInstaller.Interface.csproj
+++ b/FomodInstaller.Interface/FomodInstaller.Interface.csproj
@@ -8,6 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <Title>FOMOD Installer Library</Title>
+    <Description>Front-end interface for Nexus Mods' FOMOD installer implementation.</Description>
   </PropertyGroup>
   
   <ItemGroup>
