--- a/AntlrUtil/AntlrUtil.csproj
+++ b/AntlrUtil/AntlrUtil.csproj
@@ -19,6 +19,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.JavaScript.NodeApi.Generator" Version="0.5.*" />
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.326103">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
