Added back root package as meta package

--- a/src/ModInstaller.IPC.TypeScript/package.json
+++ b/src/ModInstaller.IPC.TypeScript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fomod-installer",
+  "name": "fomod-installer-ipc",
   "version": "0.10.0",
   "description": "Installer for xml and c# fomods",
   "typings": "index.d.ts",
