--- a/package.json
+++ b/package.json
@@ -28,12 +28,18 @@
     "index.d.ts",
     "install.js",
     "cleanup.js",
-    "src/ModInstaller.Native.TypeScript/dist",
+    "dist/**/*",
+    "src/ModInstaller.Native.TypeScript/dist/**/*",
     "src/ModInstaller.Native.TypeScript/package.json",
-    "src/ModInstaller.IPC.TypeScript/dist",
+    "src/ModInstaller.Native.TypeScript/postinstall.js",
+    "src/ModInstaller.IPC.TypeScript/dist/**/*",
     "src/ModInstaller.IPC.TypeScript/package.json",
     "src/ModInstaller.IPC.TypeScript/index.js",
     "src/ModInstaller.IPC.TypeScript/index.d.ts",
+    "src/ModInstaller.IPC.TypeScript/build.js",
+    "src/ModInstaller.IPC.TypeScript/cleanup-processes.js",
+    "src/ModInstaller.IPC.TypeScript/dummy.js",
+    "src/ModInstaller.IPC.TypeScript/postinstall.js",
     "CHANGELOG.md",
     "LICENSE.md",
     "README.md"
