--- a/src/ModInstaller.Native.TypeScript/package.json
+++ b/src/ModInstaller.Native.TypeScript/package.json
@@ -75,6 +75,8 @@
     "dist/ModInstaller.Native.dll",
     "dist/modinstaller.node",
     "postinstall.js",
+    "commands.ps1",
+    "binding.gyp",
     "CHANGELOG.md",
     "LICENSE",
     "README.md"
