Replaced powershell with javascript

--- a/src/ModInstaller.Native.TypeScript/package.json
+++ b/src/ModInstaller.Native.TypeScript/package.json
@@ -17,15 +17,16 @@
     "url": "https://github.com/Nexus-Mods/fomod-installer/issues"
   },
   "scripts": {
-    "clean": "pwsh ./commands.ps1 clean",
-    "native": "pwsh ./commands.ps1 build-native",
-    "build": "pwsh ./commands.ps1 build",
-    "build-native": "pwsh ./commands.ps1 build-native",
-    "build-napi": "pwsh ./commands.ps1 build-napi",
-    "build-ts": "pwsh ./commands.ps1 build-ts",
-    "build-content": "pwsh ./commands.ps1 build-content",
-    "test": "pwsh ./commands.ps1 test",
-    "test-build": "pwsh ./commands.ps1 test-build",
+    "clean": "node build.js clear",
+    "native": "node build.js build-native",
+    "build-without-gyp": "node build.js build",
+    "build": "node build.js build",
+    "build-native": "node build.js build-native",
+    "build-napi": "node build.js build-napi",
+    "build-ts": "node build.js build-ts",
+    "build-content": "node build.js build-content",
+    "test": "node build.js test",
+    "test-build": "node build.js test-build",
     "test-no-build": "pwsh ./commands.ps1 test-no-build",
     "watch:build": "tsc -p tsconfig.json -w",
     "watch:test": "nyc --silent ava --watch",
