Corrected Native tests

--- a/test/ModInstaller.Native.Tests/ModInstaller.Native.Tests.csproj
+++ b/test/ModInstaller.Native.Tests/ModInstaller.Native.Tests.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <TargetFramework>net9.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <RootNamespace>ModInstaller.Native.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
