Made XML related callbacks sync instead of async
Removed all Task.Run from XML/Native codebase
Added the ability to override FOMOD filesystem access in Native
Added back the ability to run the IPC via .NET Framework 4.8, since this might be important for compatibility with older C# FOMOD mods, of they even exist
Added more tests

--- a/src/AntlrUtil/AntlrUtil.csproj
+++ b/src/AntlrUtil/AntlrUtil.csproj
@@ -2,6 +2,7 @@
   
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
     <OutputType>Library</OutputType>
     <RootNamespace>Nexus.Client.Util.Antlr</RootNamespace>
     
