--- a/test/ModInstaller.Adaptor.Tests.Shared/ModInstaller.Adaptor.Tests.Shared.csproj
+++ b/test/ModInstaller.Adaptor.Tests.Shared/ModInstaller.Adaptor.Tests.Shared.csproj
@@ -1,16 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <TargetFramework>net9.0-windows</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="TUnit" Version="0.73.19" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\..\src\FomodInstaller.Interface\FomodInstaller.Interface.csproj" />
     <ProjectReference Include="..\TestData\TestData.csproj" />
   </ItemGroup>
 
