--- a/src/FomodInstaller.Interface/FomodInstaller.Interface.csproj
+++ b/src/FomodInstaller.Interface/FomodInstaller.Interface.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
     <OutputType>Library</OutputType>
     
     <Copyright>Copyright ©  2016</Copyright>
