--- a/src/ModInstaller.IPC/ModInstaller.IPC.csproj
+++ b/src/ModInstaller.IPC/ModInstaller.IPC.csproj
@@ -1,14 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
   <PropertyGroup>
-    <TargetFramework>net9.0-windows</TargetFramework>
+    <TargetFrameworks>net9.0-windows;net48</TargetFrameworks>
+    <LangVersion>preview</LangVersion>
     <OutputType>Exe</OutputType>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseWindowsForms>true</UseWindowsForms>
-    
-    <SelfContained>false</SelfContained>
-    <EnableCompressionInSingleFile>false</EnableCompressionInSingleFile>
+
+    <RootNamespace>ModInstallerIPC</RootNamespace>
+    <AssemblyName>ModInstallerIPC</AssemblyName>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="$(TargetFramework) == 'net9.0-windows'">
+    <SelfContained>true</SelfContained>
+    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
     <PublishSingleFile>true</PublishSingleFile>
     <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
@@ -19,10 +25,6 @@
     <PublishTrimmed>true</PublishTrimmed>
     <InvariantGlobalization>true</InvariantGlobalization>
     -->
-    
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <RootNamespace>ModInstallerIPC</RootNamespace>
-    <AssemblyName>ModInstallerIPC</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="$(Configuration) == 'Release'">
