--- a/test/TestData/TestData.csproj
+++ b/test/TestData/TestData.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Data\Fallout4\Improved Map with Visible Roads 2.0-1215-2-0.zip" />
+    <EmbeddedResource Include="Data\FalloutNV\NVAC - New Vegas Anti Crash-53635-7-5-1-0.zip" />
+    <EmbeddedResource Include="Data\FalloutNV\The Mod Configuration Menu-42507-1-5.7z" />
     <EmbeddedResource Include="Data\Skyrim\Spell Perk Item Distributor-36869-7-1-3-1713397024.7z" />
     <EmbeddedResource Include="Data\Skyrim\Better MessageBox Controls v1_2-1428-1-2.zip" />
     <EmbeddedResource Include="Data\Skyrim\XP32 Maximum Skeleton Special Extended-1988-5-06-1707663131.7z" />
