--- a/src/ModInstaller.IPC.TypeScript/tsconfig.json
+++ b/src/ModInstaller.IPC.TypeScript/tsconfig.json
@@ -36,22 +36,18 @@
     "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
     "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
     "lib": [
-      "es2017"
+      "ES2019"
     ],
     "types": [
       "node"
     ],
     "typeRoots": [
       "node_modules/@types",
-      "src/lib/types"
+      "src/types"
     ]
   },
   "include": [
-    "src/lib/**/*",
-    "src/lib/launchers/**/*",
-    "src/lib/transport/**/*",
-    "src/lib/util/**/*",
-    "src/lib/BaseIPCConnection.ts"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules/**"
