--- a/src/ModInstaller.Native.TypeScript/package.json
+++ b/src/ModInstaller.Native.TypeScript/package.json
@@ -3,7 +3,7 @@
   "version": "0.10.0",
   "description": "Package of native bindings bundled with TS declarations",
   "main": "./dist/index.js",
-  "types": "./dist/lib/index.d.ts",
+  "types": "./dist/index.d.ts",
   "gypfile": true,
   "repository": {
     "type": "git",
@@ -28,16 +28,7 @@
     "test": "node build.js test",
     "test-build": "node build.js test-build",
     "test-no-build": "pwsh ./commands.ps1 test-no-build",
-    "watch:build": "tsc -p tsconfig.json -w",
-    "watch:test": "nyc --silent ava --watch",
-    "cov": "run-s build test-no-build cov:html cov:lcov && open-cli coverage/index.html",
-    "cov:html": "nyc report --reporter=html",
-    "cov:lcov": "nyc report --reporter=lcov",
-    "cov:send": "run-s cov:lcov && codecov",
-    "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
-    "doc": "run-s doc:html && open-cli dist/docs/index.html",
-    "doc:html": "typedoc --entryPoints src/lib/index.ts --exclude **/*.spec.* --exclude **/_*.* --out dist/docs",
-    "doc:json": "typedoc --entryPoints src/lib/index.ts --exclude **/*.spec.* --exclude **/_*.* --json dist/docs/typedoc.json"
+    "watch:build": "tsc -p tsconfig.json -w"
   },
   "engines": {
     "node": ">=22"
@@ -48,61 +39,14 @@
     ]
   },
   "devDependencies": {
-    "@ava/typescript": "^1.1.1",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/node": "^22.0.0",
-    "ava": "^3.15.0",
-    "codecov": "^3.8.2",
-    "copy-webpack-plugin": "^12.0.1",
-    "cspell": "^6.19.2",
-    "native-addon-loader": "^2.0.1",
     "node-addon-api": "8.5.0",
     "node-gyp": "10.0.0",
-    "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
-    "open-cli": "^7.0.1",
-    "shx": "^0.3.4",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.7",
     "typescript": "^5.0.0",
     "vortex-api": "Nexus-Mods/vortex-api",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
-  },
-  "overrides": {
-    "got": "^11.8.5"
-  },
-  "files": [
-    "dist/main/index.*",
-    "dist/main/lib",
-    "dist/module/index.*",
-    "dist/module/lib",
-    "dist/webpack/index.*",
-    "dist/ModInstaller.Native.dll",
-    "dist/modinstaller.node",
-    "CHANGELOG.md",
-    "LICENSE",
-    "README.md"
-  ],
-  "ava": {
-    "failFast": false,
-    "timeout": "60s",
-    "typescript": {
-      "rewritePaths": {
-        "src/": "dist/main/"
-      }
-    },
-    "files": [
-      "!dist/module/**"
-    ]
-  },
-  "nyc": {
-    "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "**/_*.*",
-      "**/Version.xml",
-      "**/*.spec.*"
-    ]
   }
 }
